small change in width of divs

--- a/style.css
+++ b/style.css
@@ -165,13 +165,9 @@ nav div.menu-items {
     align-items: center;
     text-align: center;
     gap: 24px;
-    margin: 32px auto;
-    max-width: 1400px;
+    margin: 32px 96px;
     padding: 128px;
     background: url(./images/hero_bg.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center; 
     border-radius: 32px;
 }
 
@@ -187,8 +183,7 @@ nav div.menu-items {
     flex-direction: column;
     align-items: center;
     gap: 48px;
-    margin: 64px auto;
-    max-width: 1400px;
+    margin: 96px;
 }
 
 .features-feature-grid {
@@ -253,8 +248,7 @@ nav div.menu-items {
     flex-direction: column;
     align-items: center;
     gap: 24px;
-    margin: 64px auto;
-    max-width: 1400px;
+    margin: 96px;
     margin-bottom: 48px;
 }
 
@@ -298,13 +292,12 @@ nav div.menu-items {
 /* User Reviews */
 .user-reviews {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 48px;
-    margin: 64px auto;
-    padding: 32px 96px 32px 32px;
-    max-width: 1400px;
+    padding: 32px 64px;
+    margin: 96px;
     border-radius: 32px;
+    margin-top: 0;
     background: url(./images/Variant3_bg.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -333,8 +326,6 @@ nav div.menu-items {
     flex-direction: column;
     align-items: center;
     gap: 24px;
-    margin: 64px auto;
-    max-width: 1400px;
     padding: 64px;
     border-block: 1px solid transparent;
     border-image: linear-gradient(to right, black, rgb(73, 0, 95), black);
@@ -369,8 +360,7 @@ nav div.menu-items {
     flex-direction: column;
     gap: 24px;
     align-items: center;
-    margin: 64px auto;
-    max-width: 1400px;
+    margin: 48px 96px;
     text-align: center;
 }
 
@@ -406,7 +396,6 @@ nav div.menu-items {
     align-items: center;
     gap: 16px;
     margin: 0 auto;
-    max-width: 1400px;
     padding: 64px;
     border-block: 1px solid transparent;
     border-image: linear-gradient(to right, black, rgb(73, 0, 95), black);
@@ -417,7 +406,6 @@ nav div.menu-items {
 .footer {
     background: rgba(255, 255, 255, 0.075);
     display: flex;
-    justify-content: center;
     padding: 96px;
     gap: 48px;
 }
